// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ValidationSummary /> should call the render props correctly 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      <div
        className="validation-summary"
        id="unitSummary"
      >
        <h4
          className="alert-heading"
        >
          Errors
        </h4>
        <ul />
      </div>,
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": null,
    },
  ],
}
`;

exports[`<ValidationSummary /> should ignore valid fields 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ValidationSummary
    context={
      Object {
        "asyncValidateOnChange": false,
        "asyncValidationWait": 400,
        "busy": false,
        "defaultValues": Object {},
        "disabled": false,
        "fieldPrefix": null,
        "getFieldState": [MockFunction],
        "getValues": [MockFunction],
        "notifyFieldEvent": [MockFunction],
        "plaintext": false,
        "registerField": [MockFunction],
        "registerListener": [MockFunction] {
          "calls": Array [
            Array [
              "unitSummary",
              [Function],
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        },
        "stringFormatter": [MockFunction] {
          "calls": Array [
            Array [
              "test",
              Object {},
            ],
            Array [
              "Unit field",
            ],
            Array [
              "ojs_form_validationSummaryHeader",
            ],
            Array [
              "test",
              Object {},
            ],
            Array [
              "Unit field",
            ],
            Array [
              "ojs_form_validationSummaryHeader",
            ],
            Array [
              "test",
              Object {},
            ],
            Array [
              "Unit field",
            ],
            Array [
              "ojs_form_validationSummaryHeader",
            ],
            Array [
              "test",
              Object {},
            ],
            Array [
              "Unit field",
            ],
            Array [
              "ojs_form_validationSummaryHeader",
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": "test",
            },
            Object {
              "isThrow": false,
              "value": "Unit field",
            },
            Object {
              "isThrow": false,
              "value": "Errors",
            },
            Object {
              "isThrow": false,
              "value": "test",
            },
            Object {
              "isThrow": false,
              "value": "Unit field",
            },
            Object {
              "isThrow": false,
              "value": "Errors",
            },
            Object {
              "isThrow": false,
              "value": "test",
            },
            Object {
              "isThrow": false,
              "value": "Unit field",
            },
            Object {
              "isThrow": false,
              "value": "Errors",
            },
            Object {
              "isThrow": false,
              "value": "test",
            },
            Object {
              "isThrow": false,
              "value": "Unit field",
            },
            Object {
              "isThrow": false,
              "value": "Errors",
            },
          ],
        },
        "submit": [MockFunction],
        "unregisterField": [MockFunction],
        "unregisterListener": [MockFunction],
      }
    }
    disableFocusOnSubmit={false}
    id="unitSummary"
    title="ojs_form_validationSummaryHeader"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h4
          className="alert-heading"
        >
          Errors
        </h4>,
        <ul>
          <li>
            <a
              href="#unitField"
              onClick={[Function]}
            >
              Unit field
              :
               
              <span>
                test
              </span>
            </a>
          </li>
        </ul>,
      ],
      "className": "validation-summary",
      "id": "unitSummary",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Errors",
          "className": "alert-heading",
        },
        "ref": Object {
          "current": null,
        },
        "rendered": "Errors",
        "type": "h4",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li>
              <a
                href="#unitField"
                onClick={[Function]}
              >
                Unit field
                :
                 
                <span>
                  test
                </span>
              </a>
            </li>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "unitField",
            "nodeType": "host",
            "props": Object {
              "children": <a
                href="#unitField"
                onClick={[Function]}
              >
                Unit field
                :
                 
                <span>
                  test
                </span>
              </a>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Unit field",
                  ":",
                  " ",
                  Array [
                    <span>
                      test
                    </span>,
                  ],
                ],
                "href": "#unitField",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Array [
                "Unit field",
                ":",
                " ",
                Object {
                  "instance": null,
                  "key": "unitField_test",
                  "nodeType": "host",
                  "props": Object {
                    "children": "test",
                  },
                  "ref": null,
                  "rendered": "test",
                  "type": "span",
                },
              ],
              "type": "a",
            },
            "type": "li",
          },
        ],
        "type": "ul",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h4
            className="alert-heading"
          >
            Errors
          </h4>,
          <ul>
            <li>
              <a
                href="#unitField"
                onClick={[Function]}
              >
                Unit field
                :
                 
                <span>
                  test
                </span>
              </a>
            </li>
          </ul>,
        ],
        "className": "validation-summary",
        "id": "unitSummary",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Errors",
            "className": "alert-heading",
          },
          "ref": Object {
            "current": null,
          },
          "rendered": "Errors",
          "type": "h4",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li>
                <a
                  href="#unitField"
                  onClick={[Function]}
                >
                  Unit field
                  :
                   
                  <span>
                    test
                  </span>
                </a>
              </li>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "unitField",
              "nodeType": "host",
              "props": Object {
                "children": <a
                  href="#unitField"
                  onClick={[Function]}
                >
                  Unit field
                  :
                   
                  <span>
                    test
                  </span>
                </a>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Unit field",
                    ":",
                    " ",
                    Array [
                      <span>
                        test
                      </span>,
                    ],
                  ],
                  "href": "#unitField",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": Array [
                  "Unit field",
                  ":",
                  " ",
                  Object {
                    "instance": null,
                    "key": "unitField_test",
                    "nodeType": "host",
                    "props": Object {
                      "children": "test",
                    },
                    "ref": null,
                    "rendered": "test",
                    "type": "span",
                  },
                ],
                "type": "a",
              },
              "type": "li",
            },
          ],
          "type": "ul",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<ValidationSummary /> should render when it receives new validation states 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ValidationSummary
    context={
      Object {
        "asyncValidateOnChange": false,
        "asyncValidationWait": 400,
        "busy": false,
        "defaultValues": Object {},
        "disabled": false,
        "fieldPrefix": null,
        "getFieldState": [MockFunction],
        "getValues": [MockFunction],
        "notifyFieldEvent": [MockFunction],
        "plaintext": false,
        "registerField": [MockFunction],
        "registerListener": [MockFunction] {
          "calls": Array [
            Array [
              "unitSummary",
              [Function],
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        },
        "stringFormatter": [MockFunction] {
          "calls": Array [
            Array [
              "test",
              Object {},
            ],
            Array [
              "Unit field",
            ],
            Array [
              "ojs_form_validationSummaryHeader",
            ],
            Array [
              "test",
              Object {},
            ],
            Array [
              "Unit field",
            ],
            Array [
              "ojs_form_validationSummaryHeader",
            ],
            Array [
              "test",
              Object {},
            ],
            Array [
              "Unit field",
            ],
            Array [
              "ojs_form_validationSummaryHeader",
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": "test",
            },
            Object {
              "isThrow": false,
              "value": "Unit field",
            },
            Object {
              "isThrow": false,
              "value": "Errors",
            },
            Object {
              "isThrow": false,
              "value": "test",
            },
            Object {
              "isThrow": false,
              "value": "Unit field",
            },
            Object {
              "isThrow": false,
              "value": "Errors",
            },
            Object {
              "isThrow": false,
              "value": "test",
            },
            Object {
              "isThrow": false,
              "value": "Unit field",
            },
            Object {
              "isThrow": false,
              "value": "Errors",
            },
          ],
        },
        "submit": [MockFunction],
        "unregisterField": [MockFunction],
        "unregisterListener": [MockFunction],
      }
    }
    disableFocusOnSubmit={false}
    id="unitSummary"
    title="ojs_form_validationSummaryHeader"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h4
          className="alert-heading"
        >
          Errors
        </h4>,
        <ul>
          <li>
            <a
              href="#unitField"
              onClick={[Function]}
            >
              Unit field
              :
               
              <span>
                test
              </span>
            </a>
          </li>
        </ul>,
      ],
      "className": "validation-summary",
      "id": "unitSummary",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Errors",
          "className": "alert-heading",
        },
        "ref": Object {
          "current": null,
        },
        "rendered": "Errors",
        "type": "h4",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li>
              <a
                href="#unitField"
                onClick={[Function]}
              >
                Unit field
                :
                 
                <span>
                  test
                </span>
              </a>
            </li>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "unitField",
            "nodeType": "host",
            "props": Object {
              "children": <a
                href="#unitField"
                onClick={[Function]}
              >
                Unit field
                :
                 
                <span>
                  test
                </span>
              </a>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Unit field",
                  ":",
                  " ",
                  Array [
                    <span>
                      test
                    </span>,
                  ],
                ],
                "href": "#unitField",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Array [
                "Unit field",
                ":",
                " ",
                Object {
                  "instance": null,
                  "key": "unitField_test",
                  "nodeType": "host",
                  "props": Object {
                    "children": "test",
                  },
                  "ref": null,
                  "rendered": "test",
                  "type": "span",
                },
              ],
              "type": "a",
            },
            "type": "li",
          },
        ],
        "type": "ul",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h4
            className="alert-heading"
          >
            Errors
          </h4>,
          <ul>
            <li>
              <a
                href="#unitField"
                onClick={[Function]}
              >
                Unit field
                :
                 
                <span>
                  test
                </span>
              </a>
            </li>
          </ul>,
        ],
        "className": "validation-summary",
        "id": "unitSummary",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Errors",
            "className": "alert-heading",
          },
          "ref": Object {
            "current": null,
          },
          "rendered": "Errors",
          "type": "h4",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li>
                <a
                  href="#unitField"
                  onClick={[Function]}
                >
                  Unit field
                  :
                   
                  <span>
                    test
                  </span>
                </a>
              </li>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "unitField",
              "nodeType": "host",
              "props": Object {
                "children": <a
                  href="#unitField"
                  onClick={[Function]}
                >
                  Unit field
                  :
                   
                  <span>
                    test
                  </span>
                </a>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Unit field",
                    ":",
                    " ",
                    Array [
                      <span>
                        test
                      </span>,
                    ],
                  ],
                  "href": "#unitField",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": Array [
                  "Unit field",
                  ":",
                  " ",
                  Object {
                    "instance": null,
                    "key": "unitField_test",
                    "nodeType": "host",
                    "props": Object {
                      "children": "test",
                    },
                    "ref": null,
                    "rendered": "test",
                    "type": "span",
                  },
                ],
                "type": "a",
              },
              "type": "li",
            },
          ],
          "type": "ul",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<ValidationSummary /> should render without crashing 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ValidationSummary
    context={
      Object {
        "asyncValidateOnChange": false,
        "asyncValidationWait": 400,
        "busy": false,
        "defaultValues": Object {},
        "disabled": false,
        "fieldPrefix": null,
        "getFieldState": [MockFunction],
        "getValues": [MockFunction],
        "notifyFieldEvent": [MockFunction],
        "plaintext": false,
        "registerField": [MockFunction],
        "registerListener": [MockFunction] {
          "calls": Array [
            Array [
              "unitSummary",
              [Function],
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        },
        "stringFormatter": [MockFunction],
        "submit": [MockFunction],
        "unregisterField": [MockFunction],
        "unregisterListener": [MockFunction],
      }
    }
    disableFocusOnSubmit={false}
    id="unitSummary"
    title="ojs_form_validationSummaryHeader"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): null,
  Symbol(enzyme.__nodes__): Array [
    null,
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
